--- a/html/template.html
+++ b/html/template.html
@@ -19,7 +19,7 @@
             </ul>
         </aside><!--
         --><article>
-            <a id="edit" href="https://github.com/{{github_username}}/{{github_repository}}/edit/main/{{source_file_path}}"><img src="edit.png"/></a>
+            <a id="edit" href="https://github.com/{{github_username}}/{{github_repository}}/edit/main/pages/{{source_file_path}}"><img src="edit.png"/></a>
             <h1>{{title}}</h1>
             {{content}}
         </article>
