Pre-fill new page fields

--- a/html/template.html
+++ b/html/template.html
@@ -19,7 +19,7 @@
             </ul>
             <div id="aside_bottom_section">
                 <a class="a_button" href="https://github.com/{{github_username}}/{{github_repository}}/edit/main/pages/{{source_file_path}}"><img src="edit.png"/></a>
-                <a class="a_button" href="https://github.com/{{github_username}}/{{github_repository}}/new/main/pages?filename=new_page_name.md"><img src="new.png"/></a>
+                <a class="a_button" href="https://github.com/{{github_username}}/{{github_repository}}/new/main/pages?filename=pages/new_page_name.md&value=---%0Atitle%3A%20Name%20of%20the%20new%20page%0A---%0A%0A%23%23%20Section%20title%0A%0AContent%20of%20the%20page"><img src="new.png"/></a>
             </div>
         </aside><!--
         --><article>
